<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>Selenium_Java</groupId>
	<artifactId>WebAutomationFramework</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Selenium - Web Automation Framework</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<apache-poi>5.3.0</apache-poi>
		<assertj-core>3.26.3</assertj-core>
		<fixture-factory.version>3.1.0</fixture-factory.version>
		<json-path.version>2.6.0</json-path.version>
		<extent-reports.version>5.1.2</extent-reports.version>
		<jackson.version>2.17.2</jackson.version>
		<lombok.version>1.18.34</lombok.version>
		<noexception.version>1.9.1</noexception.version>
		<owner.version>1.0.12</owner.version>
		<selenium-java.version>4.22.0</selenium-java.version>
		<testng.version>7.10.2</testng.version>
		<test-data-supplier.version>2.3.0</test-data-supplier.version>
		<webdrivermanager-version>5.8.0</webdrivermanager-version>
		<zerocell.version>0.5.1</zerocell.version>
		<slf4j.version>2.0.13</slf4j.version>
	</properties>

	<build>
		<plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
            </plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<suiteXmlFiles>
						<!--suppress UnresolvedMavenProperty -->
						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
			</plugin>
        </plugins>
	</build>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng.version}</version>
		</dependency>

		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>${webdrivermanager-version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>${extent-reports.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium-java.version}</version>
		</dependency>

		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj-core}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.assertj/assertj-joda-time -->
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-joda-time</artifactId>
			<version>2.2.0</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.12.7</version>
		</dependency>

		<!-- APACHE POI DEPENDENCIES -->
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${apache-poi}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>${apache-poi}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.16.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.machinezoo.noexception/noexception -->
		<dependency>
			<groupId>com.machinezoo.noexception</groupId>
			<artifactId>noexception</artifactId>
			<version>${noexception.version}</version>
		</dependency>

		<dependency>
			<groupId>org.aeonbits.owner</groupId>
			<artifactId>owner</artifactId>
			<version>${owner.version}</version>
		</dependency>

		<dependency>
			<groupId>io.github.sskorol</groupId>
			<artifactId>test-data-supplier</artifactId>
			<version>${test-data-supplier.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.creditdatamw.labs/zerocell-core -->
		<dependency>
			<groupId>com.creditdatamw.labs</groupId>
			<artifactId>zerocell-core</artifactId>
			<version>${zerocell.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/br.com.six2six/fixture-factory -->
		<dependency>
			<groupId>br.com.six2six</groupId>
			<artifactId>fixture-factory</artifactId>
			<version>${fixture-factory.version}</version>
		</dependency>

		<!-- SLF4J API -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<!-- SLF4J Log4j Implementation -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.23.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.23.1</version>
		</dependency>
	</dependencies>
	<repositories>
		<repository>
			<id>maven_central</id>
			<name>Maven Central</name>
			<url>https://repo.maven.apache.org/maven2/</url>
		</repository>
	</repositories>

</project>
